# GoNotesFast

./: README.md  main.py  main0.py  main2.py  pyproject.toml  readme.txt  requirements.txt
migrations/: env.py
migrations/versions/: c0e84b1957d2_init.py  d977f0e34d35_init.py
src/: schemas.py
src/database/: models.py
src/repository/: contacts.py
src/routes/: contacts.py
src/services/auth/: auth.py  auth_token.py
